tests/test_files/valid/attribute_assignment_json.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct MyStructComposition
    weight : string
    my_location : Location
End

MyStructComposition structComp1
    weight : "50 kg"
    my_location : {"id" : "0x4711", "type":"pallet"}
End
