tests/test_files/invalid/syntax/json_missing_quotes.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

MyStructComposition structComp1
    my_location : {id : "0x4711"}
End
